--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,24 +19,26 @@ jobs:
       
     - name: Prepare the environment
       run: |
-        uname -m
         sudo apt update
         sudo apt -y install python3 python3-pip cpio wget git
-        pip install twrpdtgen
-        pip3 install sebaubuntu-libs
-        mkdir dt
+        pip install --upgrade pip
+        pip install git+https://github.com/SEBASTIEN67200/twrpdtgen.git
+        mkdir -p dt
       
     - name: Download boot or recovery img
       run: |
         aria2c "${{ github.event.inputs.IMG_URL }}"
-        ls
-      
+        ls -la
+        
     - name: Start build
       run: |
-        python3 -m twrpdtgen -o dt/ *.img
+        IMG_FILE=$(ls *.img | head -1)
+        python3 -m twrpdtgen -o dt/ "$IMG_FILE"
+        
     - name: ZIP device tree
       run: |
         zip -r DeviceTree.zip ./dt
+        
     - name: Upload to Release
       uses: softprops/action-gh-release@v1
       with:
