--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,7 @@ jobs:
         sudo apt update
         sudo apt -y install python3 python3-pip cpio wget git
         pip install --upgrade pip
-        pip install git+https://github.com/SEBASTIEN67200/twrpdtgen.git
+        pip install twrpdtgen --upgrade
         mkdir -p dt
       
     - name: Download boot or recovery img
