--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,7 @@ jobs:
         sudo apt -y install python3 python3-pip cpio wget git aria2
         pip install --upgrade pip
         pip install twrpdtgen==2.2.0
+        pip install sebaubuntu-libs
         mkdir -p dt
       
     - name: Download boot or recovery img
